--- a/portfolio_site/index.html
+++ b/portfolio_site/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            background: linear-gradient(to right, #3a0ca3, #1d3557);
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
             font-family: Arial, sans-serif;
             text-align: center;
             color: white;
@@ -18,6 +18,12 @@
         header h1 {
             text-align: center;
             font-size: 2em;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 50px;
+            display: inline-block;
+            padding: 15px 30px;
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
         }
         .about img {
             display: block;
@@ -43,52 +49,43 @@
 </head>
 <body>
     <header>
-        <h1>Добро пожаловать в мой Клан)!</h1>
+        <h1>Добро пожаловать в мой Портфолио)!</h1>
     </header>
     <main>
         <section class="about">
             <img src="avatar.png" alt="Мой аватар" width="150">
             <h2>Обо мне</h2>
-            <p><strong>Имя:</strong> CheZaXerh9</p>
+            <p><strong>Имя:</strong> Руслан</p>
             <p><strong>Город:</strong> Павлодар</p>
-            
+            <p><strong>Цель:</strong> Научиться большему</p>
+            <p><strong>Образование:</strong> Учусь в ПГУ Университете</p>
+            <p><strong>Специальность:</strong> Computer science</p>
         </section>
         <section class="interests">
-            <h2>Требования</h2>
-            <p>Ранг Выше Сильвера 4, Понимание и навыки игры.</p>
+            <h2>Навыки</h2>
+            <p>Дружилюбие комнадная работа стрессоустойчивость</p>
         </section>
         <section class="hobbies">
-            <h2>О клане</h2>
-            <p>Клан Создан недавно,Активно развиваеться люди доброжелательные (не все).</p>
-        </section>
-        <section class="skills">
-            <h2>Навыки</h2>
-            <h3>Требуемые навыки:</h3>
-            <ul>
-                <li>Понимание карты</li>
-                <li>Хорошая Стрельба</li>
-                <li>Знание раскида</li>
-            </ul>
-            <h3>Желательные навыки:</h3>
+            <h2>Технические навыки:</h2>
+            <p>HTML Python JavaScript Delfi.</p>
+            <h3>Мягкие навыки:</h3>
             <ul>
                 <li>Командная работа</li>
                 <li>Доброжелательность</li>
-                <li>Стрессоутойчивость</li>
+                <li>Стрессоустойчивость</li>
             </ul>
+
         </section>
-        <section class="projects">
-            <h2>Звание клана</h2>
-            <p>Бронза 2.</p>
-        </section>
-        <section class="achievements">
-            <h2>Численность клана</h2>
-            <p>20 Человек.</p>
+        <section class="skills">
+            <h2>Достижения</h2>
+            <h3>Сертификаты о пройденных курсах Web,
+                 работа над этим прототипом</h3>
         </section>
         <section class="contacts">
             <h2>Контакты</h2>
-            <p>Email: CheZaXerh9@mail.ru</p>
+            <p>Email: <a href="mailto:mashev656@mail.ru">mashev656@mail.ru</a></p>
             <p>Telegram: @CheZaXerh9</p>
-            <p>GitHub: <a href="https://github.com/ivanivanov" target="_blank">github.com/ivanivanov</a></p>
+            <p>GitHub: <a href="https://github.com/CheZaXerh9" target="_blank">github.com/CheZaXerh9</a></p>
         </section>
     </main>
     <footer>
